<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="363dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="109dp"
                android:layout_height="36dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/sign_up"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/first_name"
                android:layout_width="350dp"
                android:layout_height="31dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="31dp"
                android:text="@string/first_name"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/first_name_placeholder"
                android:textColor="#D1CFCF"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProfilePicture" />


            <TextView
                android:id="@+id/editTextLastName"
                android:layout_width="350dp"
                android:layout_height="31dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="31dp"
                android:text="@string/last_name"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

            <EditText
                android:id="@+id/editTextLastName2"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/last_name_placeholder"
                android:textColor="#D1CFCF"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProfilePicture" />


            <TextView
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="350dp"
                android:layout_height="31dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="31dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

            <EditText
                android:id="@+id/email"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/email_placeholder"
                android:textColor="#D1CFCF"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProfilePicture" />


            <TextView
                android:id="@+id/password"
                android:layout_width="350dp"
                android:layout_height="31dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="31dp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

            <EditText
                android:id="@+id/password_toggle"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/password_hint"
                android:textColor="#D1CFCF"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProfilePicture" />



            <TextView
                android:layout_width="350dp"
                android:layout_height="31dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="31dp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/password_hint"
                android:textColor="#D1CFCF"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProfilePicture" />

            <TextView
                android:id="@+id/textViewProfilePicture"
                android:layout_width="350dp"
                android:layout_height="31dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="31dp"
                android:text="@string/profile_image"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/profile_image_placeholder"
                android:textColor="#D1CFCF"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProfilePicture" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
